# whatdo

./: Cargo.toml  LICENSE  README.md  WHATDO.yaml
src/: core.rs  git.rs  main.rs  sample.rs
test_data/: WHATDO.yaml  sort_test.yaml
