[package]
edition = "2021"
name = "whatdo"
version = "0.1.0"

[[bin]]
name = "wd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.11", features = ["derive"]}
env_logger = "0.10.1"
serde = {version = "^1.0", features = ["derive"]}
serde_derive = "1.0"
serde_yaml = "0.9.29"
yaml-rust = "0.4.5"
